# cpp-speedrunner

./: .gitignore  CMakeLists.txt  README.md  example.json  mockup.cpp  toolchain-mingw64.cmake  vertex.glsl
assets/levels/: example.json  shrine_of.lvl  test-kill.lvl
assets/shaders/: conway.frag  fragment.frag  fullscreen.vert  vertex.vert
include/: EndScreen.h  FileReader.h  Game.h  GameObject.h  IGameWorld.h  IScene.h  ISceneManager.h  JsonReader.h  LevelData.h  LevelLoader.h  PlatformerScene.h  Player.h  Text.h  TitleScreen.h  Video.h  game.h  gameobject.h  json.h  math.h  shaders.h  video.h
level-editor-godot/: node_2d.gd  node_2d.tscn  project.godot
src/: EndScreen.cpp  FileReader.cpp  Game.cpp  GameObject.cpp  JsonReader.cpp  LevelLoader.cpp  PlatformerScene.cpp  Player.cpp  Text.cpp  TitleScreen.cpp  Video.cpp  game.cpp  main.cpp  video.cpp
src/shaders/: boxblur.frag  conway.frag
